--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "supabase": "^2.33.9",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6"
   },
