--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "19.1.0",
     "supabase": "^2.33.9",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.6"
+    "tw-animate-css": "^1.3.6",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -35,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "prisma": "^6.12.0",
