--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.12.0",
@@ -41,12 +38,15 @@
     "sonner": "^2.0.7",
     "supabase": "^2.33.9",
     "tailwind-merge": "^3.3.1",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.6",
     "web-push": "^3.6.7",
     "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@snaplet/copycat": "^6.0.0",
+    "@snaplet/seed": "^0.98.0",
     "@tailwindcss/postcss": "^4",
     "@types/google-one-tap": "^1.2.6",
     "@types/node": "^20",
